[tool.poetry]
name = "saki"
version = "0.1.0"
description = "A friend in your computer"
authors = ["Amila Jayawardhana <chamikara.amila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
